style: chane second text color & fix header z-index

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,7 @@
   position: fixed;
   top: 0;
   color: var(--first-text);
+  z-index: 99;
 }
 
 .navWrapper {
